--- a/DW2/lb4-filmes/public/index.html
+++ b/DW2/lb4-filmes/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>avaliacao M3 - filmes</title>
+  <title>M3 - filmes</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
